# AppML_FinalProject

./: README.md  pyproject.toml
aidan-sandbox/: README.md  users.txt
aidan-sandbox/src/chesscom_api/: export_month.py  pgn_tools.py
root/config/: placeholder.json
root/workspace/aidan_sandbox/: pyproject.toml
root/workspace/aidan_sandbox/apps/src/chesscom_api/: schemas.py
root/workspace/aidan_sandbox/explore/: pyproject.toml
root/workspace/aidan_sandbox/explore/xgboost/: bottom_vs_top.ipynb  features.ipynb  simple_classification.ipynb  xgboost.ipynb  xgboost_stockfish_elo_classifier.ipynb  xgboost_stockfish_elo_difference_regression.ipynb  xgboost_stockfish_elo_regression.ipynb
root/workspace/aidan_sandbox/src/chesscom_api/: chess_client.py  config.py  main.py
root/workspace/daniel_sandbox/: pgn_to_df.py  qpd797_test.ipynb
root/workspace/src/: some_function.py
root/workspace/villads_sandbox/: finalproject.ipynb
src/chesscom_api/: chess_client.py  main.py
