[project]
name = "explore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipywidgets>=8.1.8",
    "joblib>=1.5.3",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "python-chess>=1.999",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.3",
    "xgboost>=3.2.0",
    "zstandard>=0.25.0",
]
